--- a/css/style.css
+++ b/css/style.css
@@ -37,12 +37,12 @@ canvas {
 }
 
 a {
-  color: #2c98f0;
+  color: #deeaf3;
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s; }
   a:hover, a:active, a:focus {
-    color: #2c98f0;
+    color: #ffffff;
     outline: none;
     text-decoration: none !important; }
 
@@ -53,7 +53,7 @@ p {
 }
 x{
     margin-bottom: 1.5em;
-    background-color:darkkhaki;
+    background-color:#2c98f0;
     color: black;
     backface-visibility: visible;
 }
