--- a/css/style.css
+++ b/css/style.css
@@ -522,7 +522,7 @@ font-family: "Montserrat", Georgia, serif;}
 
 .hire {
   padding: 2em;
-  background: #f9bf3f; }
+  background: #2c98f0; }
   .hire h2 {
     line-height: 1.5; }
   .hire .btn-hire {
