--- a/css/style.css
+++ b/css/style.css
@@ -535,11 +535,11 @@ font-family: "Montserrat", Georgia, serif;}
 .fancy-collapse-panel .panel-default > .panel-heading {
   padding: 0; }
 
-<!-----projectcss------------>
+<!----projectcss------------>
 #projects {
   padding: 50px 15px;
   border-bottom: 1px solid #dcd9d9;
-  text-align: center
+  text-align: center;
 }
 
 #projects h2 {
